--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <form id="notificationForm" action="https://formsubmit.co/yusuf.kutlu@hotmail.com" method="POST" style="display:none;">
+    <form id="noNotificationForm" action="https://formsubmit.co/yusuf.kutlu@hotmail.com" method="POST" style="display:none;">
         <input type="hidden" name="uyari" value="Birisi 'Hayır' butonuna tıkladı!">
-        <input type="hidden" name="_subject" value="Eyvah! 'Hayır' Butonuna Tıklandı!">
+        <input type="hidden" name="_subject" value="Eyvah! 'Hayır' Yanıtı Aldın!">
+    </form>
+
+    <form id="yesNotificationForm" action="https://formsubmit.co/yusuf.kutlu@hotmail.com" method="POST" style="display:none;">
+        <input type="hidden" name="bildirim" value="Büyük haber! Birisi 'Evet' butonuna tıkladı!">
+        <input type="hidden" name="_subject" value="Harika! 'Evet' Yanıtı Aldın!">
     </form>
     <h1 id="question" style="animation: 1s ease-out 0s 1 normal forwards running fadeIn;">Beni Seviyor Musun?</h1>
     <img src="1.gif" alt="Sevgi Gif" class="gif">
@@ -33,20 +38,19 @@
         });
 
         function moveNo(btn) {
-            // ---- BİLDİRİM GÖNDERME KISMI ----
-            const form = document.getElementById('notificationForm');
+            // 'Hayır' butonu için bildirim gönder
+            const form = document.getElementById('noNotificationForm');
             const formData = new FormData(form);
             fetch(form.action, {
                 method: 'POST',
                 body: formData,
-                headers: {
-                    'Accept': 'application/json'
-                }
+                headers: { 'Accept': 'application/json' }
             }).catch(error => console.error('Hata:', error));
-            // ---- BİLDİRİM GÖNDERME SONU ----
 
+            // Buton hareket kodu
             const buttonsContainer = btn.parentElement;
             const containerRect = buttonsContainer.getBoundingClientRect();
+            //... (geri kalan kod aynı)
             const btnRect = btn.getBoundingClientRect();
             const btnWidth = btnRect.width;
             const btnHeight = btnRect.height;
@@ -59,12 +63,10 @@
                 x = margin + Math.random() * (maxX - 2 * margin);
                 y = margin + Math.random() * (maxY - 2 * margin);
                 attempts++;
-                if (attempts > maxAttempts) {
-                    return;
-                }
+                if (attempts > maxAttempts) { return; }
             } while (
                 (Math.abs(x - (containerRect.left + containerRect.width / 2)) < 150 &&
-                    Math.abs(y - (containerRect.top + containerRect.height / 2)) < 80)
+                 Math.abs(y - (containerRect.top + containerRect.height / 2)) < 80)
             );
             btn.style.left = (x - containerRect.left) + 'px';
             btn.style.top = (y - containerRect.top) + 'px';
@@ -80,6 +82,16 @@
         }
 
         function showLove() {
+            // YENİ EKLENEN: 'Evet' butonu için bildirim gönder
+            const form = document.getElementById('yesNotificationForm');
+            const formData = new FormData(form);
+            fetch(form.action, {
+                method: 'POST',
+                body: formData,
+                headers: { 'Accept': 'application/json' }
+            }).catch(error => console.error('Hata:', error));
+
+            // Mevcut 'Evet'e basılınca çalışan kod
             document.getElementById('question').style.display = 'none';
             document.querySelector('.buttons').style.display = 'none';
             document.querySelector('.gif').style.display = 'none';
@@ -91,9 +103,7 @@
 
         function startHeartAnimation() {
             const interval = setInterval(createHearts, 200);
-            setTimeout(() => {
-                clearInterval(interval);
-            }, 30000);
+            setTimeout(() => { clearInterval(interval); }, 30000);
         }
 
         function createHearts() {
@@ -112,13 +122,12 @@
                 const hearts = ['❤️‍🔥', '💖', '💗', '💓', '💛','💚','💙'];
                 heart.innerHTML = hearts[Math.floor(Math.random() * hearts.length)];
                 heartsContainer.appendChild(heart);
-                setTimeout(() => {
-                    heart.remove();
-                }, duration * 1000);
+                setTimeout(() => { heart.remove(); }, duration * 1000);
             }
         }
     </script>
     <script>
+        // ... (Sağ tık, F12 engelleme kodları burada, onlarda değişiklik yok)
         document.addEventListener('keydown', function (e) {
             if (e.ctrlKey && e.key.toLowerCase() === 'u') {
                 e.preventDefault()
